Fixed the album alignment bug/issue

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -35,6 +35,68 @@ body {
     text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 
+/* CUSTOMIZE THE NAVBAR
+-------------------------------------------------- */
+
+/* Special class on .container surrounding .navbar, used for positioning it into place. */
+.navbar-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 20;
+    text-shadow: none;
+}
+
+/* Flip around the padding for proper display in narrow viewports */
+.navbar-wrapper > .container {
+    padding-right: 0;
+    padding-left: 0;
+}
+.navbar-wrapper .navbar {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+.navbar-wrapper .navbar .container {
+    width: auto;
+}
+
+li.profile-picture a.profile-image {
+    padding: 5px;
+}
+
+li.profile-picture img {
+    width: 40px;
+}
+
+@media (min-width: 768px) {
+    /* Navbar positioning foo */
+        .navbar-wrapper {
+        margin-top: 20px;
+    }
+    .navbar-wrapper .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .navbar-wrapper .navbar {
+        padding-right: 0;
+        padding-left: 0;
+    }
+
+    /* The navbar becomes detached from the top, so we round the corners */
+    .navbar-wrapper .navbar {
+        border-radius: 4px;
+    }
+
+    ul#albums {
+        list-style-type: none;
+        text-align: left;
+        padding: 0px;
+        margin-top: 60px;
+    }
+}
+
+/* Custom Navbar end */
 .logo {
     text-align: left;
     margin-left: 20px;
@@ -46,6 +108,25 @@ body {
     padding-top: 20px;
 }
 
+.album-container{
+    margin-top: 95px;
+}
+ul#albums {
+    list-style-type: none;
+    text-align: left;
+    padding: 0px;
+    margin-top: 90px;
+    cursor: pointer;
+}
+
+ul#albums li {
+    display: inline-block;
+}
+
+.album {
+    width: 180px;
+    margin-bottom: 10px;
+}
 div.img-div{
     height:200px;
     width:200px;
@@ -259,6 +340,7 @@ li.css a {
     margin: 0;
     padding: 0;
     cursor: default;
+    text-align: left;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -268,12 +350,11 @@ li.css a {
 
 .listrap li {
     margin: 0;
-    /*padding: 10px;*/
+    padding: 10px;
 }
 
 .listrap li.active, .listrap li:hover {
-    cursor: pointer;
-    /*background-color: #d9edf7;*/
+    background-color: #d9edf7;
 }
 
 .listrap strong {
@@ -282,8 +363,8 @@ li.css a {
 
 .listrap .listrap-toggle {
     display: inline-block;
-    /*width: 60px;
-    height: 60px;*/
+    width: 60px;
+    height: 60px;
 }
 
 .listrap .listrap-toggle span {
